[package]
name = "microkernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
x86_64 = "0.14.2"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"

[build-dependencies]
bootloader = "0.9.8"
cc = "1.0"
